--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
 <div class="flex flex-auto flex-col text-center items-center justify-center pt-6">
 <h1 class="text-6xl">404 Page Not Found</h1>
-<h4>You're in the wrong place.</h4>
+<h4>henlo. you're in the wrong place.</h4>
 </div>
